<resources>
    <string name="app_name">QuizActivity</string>
    <string name="question_text">تهران پايتخت ايران است</string>
    <string name="btn_true">درست</string>
    <string name="btn_false">نادرست</string>
    <string name="message_correct">پاسخ درست است</string>
    <string name="message_in_correct">پاسخ اشتباه است</string>
    <string name="question_australia">استرالیا بزرگ ترین قاره جهان است.</string>
    <string name="question_oceans">اقیانوس آرام بزرگ ترین اقیانوس جهان است.</string>
    <string name="question_mideast">همه کشورهای خاورمیانه عرب زبان هستند.</string>
    <string name="question_africa">مصر در قاره آفریقا قرار دارد.</string>
    <string name="question_americas">کشور آمریکا پرجمعیت ترین کشور دنیا است.</string>
    <string name="question_asia">قاره آسیا در نیم کره جنوبی جهان واقع شده است.</string>
    <string name="button_next">بعدي</string>
    <string name="button_question_cheat">آيا براي تقلب كردن مطمئن هستيد؟</string>
    <string name="button_answer_cheat">نمايش تقلب</string>
    <string name="button_cheat">تقلب</string>
    <string name="message_cheat">شما تقلب كرديد</string>
    <string name="button_setting">تنظيمات</string>
    <string name="select_size_text">Select Size Text</string>
    <string name="radio_btn_small">Small</string>
    <string name="radio_btn_medium">Medium</string>
    <string name="radio_btn_large">Large</string>
    <string name="text_select_color_background">Select Color Background</string>
    <string name="text_rd_btn_lightred">LightRed</string>
    <string name="text_rd_btn_lightblue">LightBlue</string>
    <string name="text_rd_btn_lightgreen">LightGreen</string>
    <string name="text_rd_btn_white">White</string>
    <string name="text_true_answer_button">True Answer Button</string>
    <string name="text_show">Show</string>
    <string name="text_hide">Hide</string>
    <string name="text_false_answer_button">False Answer Button</string>
    <string name="text_next_button">Next Button</string>
    <string name="text_previous_button">Previous Button</string>
    <string name="text_first_button">First Button</string>
    <string name="text_last_button">Last Button</string>
    <string name="text_cheat_button">Cheat Button</string>
    <string name="text_save">Save</string>
    <string name="text_discard">Discard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>