<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".QuizActivity">


    <TextView
        android:id="@+id/text_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:paddingBottom="8dp"
        android:text="@string/question_text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/true_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_correct"
        android:textColor="@color/colorGreen"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/false_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_in_correct"
        android:textColor="@color/colorRed"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_in_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/btn_false" />

        <Button
            android:id="@+id/btn_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:text="@string/btn_true" />

    </LinearLayout>

</LinearLayout>