<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:text="@string/select_size_text"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/font_size_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_btn_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/radio_btn_small"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rd_btn_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:checked="true"
                android:text="@string/radio_btn_medium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rd_btn_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_large"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </RadioGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:baselineAligned="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="2dp"
                android:text="@string/text_select_color_background"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/color_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rd_btn_light_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_rd_btn_lightred"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rd_btn_light_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_rd_btn_lightblue"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rd_btn_light_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_rd_btn_lightgreen"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rd_btn_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/text_rd_btn_white"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_true_answer_button"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_true_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:checked="true"
                android:textColor="@android:color/black"
                android:textOff="@string/text_hide"
                android:textOn="@string/text_show"
                android:textStyle="bold"
                tools:text="Show" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_false_answer_button"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_false_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="47dp"
                android:layout_weight="1"
                android:checked="true"
                android:textColor="@android:color/black"
                android:textOff="@string/text_hide"
                android:textOn="@string/text_show"
                android:textStyle="bold"
                tools:text="Show" />

        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:baselineAligned="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:paddingLeft="5dp"
                android:text="@string/text_next_button"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="92dp"
                android:checked="true"
                android:textColor="@android:color/black"
                android:textOff="@string/text_hide"
                android:textOn="@string/text_show"
                android:textStyle="bold"
                tools:text="Show" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_previous_button"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="76dp"
                android:checked="true"
                android:textColor="@android:color/black"
                android:textOff="@string/text_hide"
                android:textOn="@string/text_show"
                android:textStyle="bold"
                tools:text="Show" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_first_button"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_btn_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="102dp"
                android:checked="true"
                android:textColor="@android:color/black"
                android:textOff="@string/text_hide"
                android:textOn="@string/text_show"
                android:textStyle="bold"
                tools:text="Show" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_last_button"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_btn_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="104dp"
                android:checked="true"
                android:textColor="@android:color/black"
                android:textOff="@string/text_hide"
                android:textOn="@string/text_show"
                android:textStyle="bold"
                tools:text="Show" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_cheat_button"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_btn_cheat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="94dp"
                android:checked="true"
                android:textColor="@android:color/black"
                android:textOff="@string/text_hide"
                android:textOn="@string/text_show"
                android:textStyle="bold"
                tools:text="Show" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="100dp"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:text="@string/text_save"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:text="@string/text_discard"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </FrameLayout>

    </LinearLayout>

</FrameLayout>